--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Elizabeth Baltazar</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="file:///C:/Users/63916/Downloads/about%20me.html">about me</a>
+                <a href="images/aboutme.jpg">about me</a>
             </div>
         </div>
     </section>
