--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
      <!-- services section start -->
      <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">My Pictures</h2>
+            <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card" style="background: url(images/week.png); background-size: cover; " >
                     <div class="box">
@@ -64,10 +64,10 @@
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(images/club.png); background-size: cover; " >
+                <div class="card" style="background: url(images/spooky.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/spooky.io/">
-                        <img src="images/sonny1.png" alt="Team Member" >
+                        <img src="images/spooky1.png" alt="Team Member" >
                         <div class="text">SPOOKY</div>
                     </a>
                     </div>
