--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -31,12 +31,12 @@
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="index.html" id="home">Home</a></li>
-                <li><a href="about.html" id="about">About</a></li>
-                <li><a href="projects.html" id="projects">My Projects</a></li>
-                <li><a href="skills.html" id="skills">Skills</a></li>
-                <li><a href="pictures.html" id="pictures">Pictures</a></li>
-                <li><a href="contact.html" id="contact">Contact</a></li>
-                <li><a href="credits.html" id="credits">Credits</a></li>
+                <li><a href="../assets/about.html" id="about">About</a></li>
+                <li><a href="../assets/projects.html" id="projects">My Projects</a></li>
+                <li><a href="../assets/skills.html" id="skills">Skills</a></li>
+                <li><a href="../assets/pictures.html" id="pictures">Pictures</a></li>
+                <li><a href="../assets/contact.html" id="contact">Contact</a></li>
+                <li><a href="../assets/credits.html" id="credits">Credits</a></li>
 
             </ul>
             <div class="menu-btn">
@@ -67,7 +67,7 @@
     <!-- Include other HTML files using JavaScript -->
     <div id="content"></div>
 
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script>
       // Load the content based on the URL hash
       function loadContent() {
