--- a/assets/about.html
+++ b/assets/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
+<!-- Created By CodingNepal -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -21,7 +21,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="index.html" id="home">Home</a></li>
+                <li><a href="../index.html" id="home">Home</a></li>
                 <li><a href="about.html" id="about">About</a></li>
                 <li><a href="projects.html" id="projects">My Projects</a></li>
                 <li><a href="skills.html" id="skills">Skills</a></li>
@@ -35,53 +35,20 @@
             </div>
         </div>
     </nav>
-     <!-- skills section start -->
-     <section class="skills" id="skills">
+
+    
+    <!-- about section start -->
+    <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">My skills</h2>
-            <div class="skills-content">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
                 <div class="column left">
-                    <div class="text">My creative skills & experiences.</div>
-                    <p>In my creative journey, I have honed my skills and gained valuable experiences in various aspects of design. With a strong focus on Design Thinking, I have developed the ability to empathize, define problems, and ideate innovative solutions. My expertise extends to JavaScript, where I have acquired a solid understanding of its concepts and functionalities, enabling me to build dynamic and interactive web applications. Additionally, I have a keen eye for aesthetics and possess proficient skills in CSS, allowing me to craft visually appealing and engaging user interfaces. While exploring the world of programming, I have dabbled in C++, acquiring fundamental knowledge and problem-solving capabilities. Lastly, I have a solid foundation in HTML, empowering me to structure and create web content effectively. </p>
-                    <a href="images/skills_page.jpg">Read more</a>
+                    <img src="images/profile-1.jpg" alt="Profile Picture">
                 </div>
                 <div class="column right">
-                    <div class="bars">
-                        <div class="info">
-                            <span>Design Thinking</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Javascript</span>
-                            <span>60%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>C++</span>
-                            <span>50%</span>
-                        </div>
-                        <div class="line php"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML
-                            </span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line mysql"></div>
-                    </div>
+                    <div class="text">I'm Elizabeth and I'm a <span class="typing"></span></div>
+                    <p>I'm a IT student at FEU Tech, passionate about web and mobile design. I love blending creativity and technology to create visually appealing and user-friendly interfaces. Constantly exploring design principles and trends, I aim to deliver engaging and intuitive user experiences. With a keen eye for aesthetics and functionality, I believe in the power of good design to make a positive impact. I'm a dedicated learner, committed to enhancing my skills and staying updated with industry trends. My goal is to contribute to the world of web and mobile design by creating beautiful and user-centric digital experiences.</p>
+                    <a href="images/CV_Baltazar.jpg">Download CV</a>
                 </div>
             </div>
         </div>
@@ -94,7 +61,7 @@
         <!-- Include other HTML files using JavaScript -->
         <div id="content"></div>
 
-        <script src="script.js"></script>
+        <script src="./js/script.js"></script>
         <script>
           // Load the content based on the URL hash
           function loadContent() {
@@ -116,4 +83,3 @@
         </script>
     </body>
     </html>
-    
