--- a/assets/pictures.html
+++ b/assets/pictures.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -23,7 +22,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="index.html" id="home">Home</a></li>
+                <li><a href="../index.html" id="home">Home</a></li>
                 <li><a href="about.html" id="about">About</a></li>
                 <li><a href="projects.html" id="projects">My Projects</a></li>
                 <li><a href="skills.html" id="skills">Skills</a></li>
@@ -90,7 +89,7 @@
     <!-- Include other HTML files using JavaScript -->
     <div id="content"></div>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
     <script>
       // Load the content based on the URL hash
       function loadContent() {
