--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="index.html" id="home">Home</a></li>
-                <li><a href="/assets/about.html" id="about">About</a></li>
-                <li><a href="/assets/projects.html" id="projects">My Projects</a></li>
-                <li><a href="/assets/skills.html" id="skills">Skills</a></li>
-                <li><a href="/assets/pictures.html" id="pictures">Pictures</a></li>
-                <li><a href="/assets/contact.html" id="contact">Contact</a></li>
-                <li><a href="/assets/credits.html" id="credits">Credits</a></li>
+                <li><a href="../assets/about.html" id="about">About</a></li>
+                <li><a href="../assets/projects.html" id="projects">My Projects</a></li>
+                <li><a href="../assets/skills.html" id="skills">Skills</a></li>
+                <li><a href="../assets/pictures.html" id="pictures">Pictures</a></li>
+                <li><a href="../assets/contact.html" id="contact">Contact</a></li>
+                <li><a href="../assets/credits.html" id="credits">Credits</a></li>
 
             </ul>
             <div class="menu-btn">
