--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Elizabeth Baltazar</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="images/aboutme.jpg">about me</a>
+                <a href="../BALTAZAR_Elizabeth-AWD-FEUTECH/assets/images/aboutme.jpg">about me</a>
             </div>
         </div>
     </section>
