--- a/assets/html/credits.html
+++ b/assets/html/credits.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
@@ -87,7 +87,7 @@
      <!-- Include other HTML files using JavaScript -->
      <div id="content"></div>
 
-     <script src="./js/script.js"></script>
+     <script src="../js/script.js"></script>
      <script>
        // Load the content based on the URL hash
        function loadContent() {
