--- a/assets/html/credits.html
+++ b/assets/html/credits.html
@@ -40,15 +40,15 @@
             <h2 class="title">Credits</h2>
             <div class="serv-content owl-carousel">
                 <div class="card">
-                            <a href="https://www.canva.com/en_ph/"> <img src= "images/canva.png " height="200px" width="200px"> </a>      
+                            <a href="https://www.canva.com/en_ph/"> <img src= "./images/canva.png " height="200px" width="200px"> </a>      
                     </div>
 
                     <div class="card">
-                        <a href="https://www.cloudflare.com/en-gb/"> <img src= "images/cloudflare.png" height="200px" width="200px"> </a>      
+                        <a href="https://www.cloudflare.com/en-gb/"> <img src= "./images/cloudflare.png" height="200px" width="200px"> </a>      
                 </div>
                 
                 <div class="card">
-                    <a href="https://www.youtube.com"> <img src= "images/youtube.png" height="200px" width="200px"> </a>      
+                    <a href="https://www.youtube.com"> <img src= "./images/youtube.png" height="200px" width="200px"> </a>      
             </div>
         </div>
 
