--- a/assets/html/skills.html
+++ b/assets/html/skills.html
@@ -43,7 +43,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>In my creative journey, I have honed my skills and gained valuable experiences in various aspects of design. With a strong focus on Design Thinking, I have developed the ability to empathize, define problems, and ideate innovative solutions. My expertise extends to JavaScript, where I have acquired a solid understanding of its concepts and functionalities, enabling me to build dynamic and interactive web applications. Additionally, I have a keen eye for aesthetics and possess proficient skills in CSS, allowing me to craft visually appealing and engaging user interfaces. While exploring the world of programming, I have dabbled in C++, acquiring fundamental knowledge and problem-solving capabilities. Lastly, I have a solid foundation in HTML, empowering me to structure and create web content effectively. </p>
-                    <a href="images/skills_page.jpg">Read more</a>
+                    <a href="./images/skills_page.jpg">Read more</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
