--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -43,7 +43,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpg" alt="Profile Picture">
+                    <img src="./images/profile-1.jpg" alt="Profile Picture">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Elizabeth and I'm a <span class="typing"></span></div>
