--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -43,12 +43,12 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="./images/profile-1.jpg" alt="Profile Picture">
+                    <img src="../images/profile-1.jpg" alt="Profile Picture">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Elizabeth and I'm a <span class="typing"></span></div>
                     <p>I'm a IT student at FEU Tech, passionate about web and mobile design. I love blending creativity and technology to create visually appealing and user-friendly interfaces. Constantly exploring design principles and trends, I aim to deliver engaging and intuitive user experiences. With a keen eye for aesthetics and functionality, I believe in the power of good design to make a positive impact. I'm a dedicated learner, committed to enhancing my skills and staying updated with industry trends. My goal is to contribute to the world of web and mobile design by creating beautiful and user-centric digital experiences.</p>
-                    <a href="images/CV_Baltazar.jpg">Download CV</a>
+                    <a href="../images/CV_Baltazar.jpg">Download CV</a>
                 </div>
             </div>
         </div>
