--- a/assets/html/pictures.html
+++ b/assets/html/pictures.html
@@ -42,34 +42,34 @@
         <div class="max-width">
             <h2 class="title">My Pictures</h2>
             <div class="carousel owl-carousel">
-                <div class="card" style="background: url(./images/art_blur.png); background-size: cover; " onclick="window.open('./images/art_final.png')">
+                <div class="card" style="background: url(../images/art_blur.png); background-size: cover; " onclick="window.open('../images/art_final.png')">
                     <div class="box">
-                        <img src="./images/art_final.png" alt="Team Member" >
+                        <img src="../images/art_final.png" alt="Team Member" >
                         <div class="text">Art Appreciation</div>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/math_blur.png); background-size: cover; " onclick="window.open('./images/math_final.png')">
+                <div class="card" style="background: url(../images/math_blur.png); background-size: cover; " onclick="window.open('../images/math_final.png')">
                     <div class="box">
-                        <img src="./images/math_final.png" alt="Team Member">
+                        <img src="../images/math_final.png" alt="Team Member">
                         <div class="text">Applied Statistics</div>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/spotify_blur.png); background-size: cover; " onclick="window.open('./images/spotify_final.png')">
+                <div class="card" style="background: url(../images/spotify_blur.png); background-size: cover; " onclick="window.open('../images/spotify_final.png')">
 
                     <div class="box">
-                        <img src="./images/spotify_final.png" alt="Team Member">
+                        <img src="../images/spotify_final.png" alt="Team Member">
                         <div class="text">Web Design</div>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/me_blur.png); background-size: cover; " onclick="window.open('./images/me_final.png')">
+                <div class="card" style="background: url(../images/me_blur.png); background-size: cover; " onclick="window.open('../images/me_final.png')">
                     <div class="box">
-                        <img src="./images/me_final.png" alt="Team Member">
+                        <img src="../images/me_final.png" alt="Team Member">
                         <div class="text">Painting</div>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/me2_blur.png); background-size: cover; " onclick="window.open('./images/me2_final.png')">
+                <div class="card" style="background: url(../images/me2_blur.png); background-size: cover; " onclick="window.open('../images/me2_final.png')">
                     <div class="box">
-                        <img src="./images/me2_final.png" alt="Team Member">
+                        <img src="../images/me2_final.png" alt="Team Member">
                         <div class="text">Photo Manipulation</div>
                     </div>
                 </div>
