--- a/assets/html/projects.html
+++ b/assets/html/projects.html
@@ -40,66 +40,66 @@
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
-                <div class="card" style="background: url(./images/week.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/week.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/week.io/">
-                        <img src="./images/week1.png" alt="Team Member" >
+                        <img src="../images/week1.png" alt="Team Member" >
                         <div class="text">WEEK</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/calcu.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/calcu.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/calculator.io/">
-                        <img src="./images/calcu1.png" alt="Team Member" >
+                        <img src="../images/calcu1.png" alt="Team Member" >
                         <div class="text">CALCULATOR</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/sonny.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/sonny.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/animation.io/">
-                        <img src="./images/sonny1.png" alt="Team Member" >
+                        <img src="../images/sonny1.png" alt="Team Member" >
                         <div class="text">ANIMATION</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/spooky.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/spooky.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/spooky.io/">
-                        <img src="./images/spooky1.png" alt="Team Member" >
+                        <img src="../images/spooky1.png" alt="Team Member" >
                         <div class="text">SPOOKY</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/bell.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/bell.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/bell.io/">
-                        <img src="./images/bell1.png" alt="Team Member" >
+                        <img src="../images/bell1.png" alt="Team Member" >
                         <div class="text">BELL</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/club.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/club.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/jump.io/">
-                        <img src="./images/club1.png" alt="Team Member" >
+                        <img src="../images/club1.png" alt="Team Member" >
                         <div class="text">JUMP</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/resume.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/resume.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/resume.io/">
-                        <img src="./images/resume1.png" alt="Team Member" >
+                        <img src="../images/resume1.png" alt="Team Member" >
                         <div class="text">RESUME</div>
                     </a>
                     </div>
                 </div>
-                <div class="card" style="background: url(./images/search.png); background-size: cover; " >
+                <div class="card" style="background: url(../images/search.png); background-size: cover; " >
                     <div class="box">
                         <a href="https://eliiibaltazar.github.io/search.io/">
-                        <img src="./images/search1.png" alt="Team Member" >
+                        <img src="../images/search1.png" alt="Team Member" >
                         <div class="text">SEARCH</div>
                     </a>
                     </div>
