--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -21,7 +21,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="../index.html" id="home">Home</a></li>
+                <li><a href="../../index.html" id="home">Home</a></li>
                 <li><a href="about.html" id="about">About</a></li>
                 <li><a href="projects.html" id="projects">My Projects</a></li>
                 <li><a href="skills.html" id="skills">Skills</a></li>
