--- a/assets/html/pictures.html
+++ b/assets/html/pictures.html
@@ -42,13 +42,13 @@
         <div class="max-width">
             <h2 class="title">My Pictures</h2>
             <div class="carousel owl-carousel">
-                <div class="card" style="background: url(../BALTAZAR_Elizabeth-AWD-FEUTECH/assets/images/art_blur.png); background-size: cover; " onclick="window.open('../BALTAZAR_Elizabeth-AWD-FEUTECH/assets/images/art_final.png')">
+                <div class="card" style="background: url(../images/art_blur.png); background-size: cover; " onclick="window.open('../images/art_final.png')">
                     <div class="box">
                         <img src="../images/art_final.png" alt="Team Member" >
                         <div class="text">Art Appreciation</div>
                     </div>
                 </div>
-                <div class="card" style="background: url(../BALTAZAR_Elizabeth-AWD-FEUTECH/assets/images/math_blur.png); background-size: cover; " onclick="window.open('../BALTAZAR_Elizabeth-AWD-FEUTECH/assets/images/math_final.png')">
+                <div class="card" style="background: url(../images/math_blur.png); background-size: cover; " onclick="window.open('../images/math_final.png')">
                     <div class="box">
                         <img src="../images/math_final.png" alt="Team Member">
                         <div class="text">Applied Statistics</div>
